@@ -1,4 +1,8 @@
-$Id: ChangeLog 4243 2016-03-20 18:29:36Z chrfranke $
+$Id: ChangeLog 4244 2016-03-24 06:32:06Z chrfranke $
+
+2016-03-24  Christian Franke  <franke@computer.org>
+
+	nvmecmds.cpp, nvmeprint.cpp: Add support for '-q noserial'.
 
 2016-03-20  Christian Franke  <franke@computer.org>
 
